objects/SalesForecastSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>M1_DisplayLabel__c</fullName>
        <label>M1 Display Label</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M1_NewSaleAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M1_NewSaleCommitAmount__c, 0)   + NULLVALUE(M1_NewSaleClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 New Sale Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSaleClosedAmount__c</fullName>
        <label>M1 New Sale Closed Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSaleCommitAmount__c</fullName>
        <label>M1 New Sale Commit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSalePipelineAmount__c</fullName>
        <label>M1 New Sale Pipeline Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSalePotentialAmount__c</fullName>
        <label>M1 New Sale Potential Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSaleQuotaGap__c</fullName>
        <formula>NULLVALUE(M1_NewSaleAdjustedAmount__c, 0)  - NULLVALUE(M1_NewSaleQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 New Sale Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSaleQuotaPercentage__c</fullName>
        <formula>IF ( OR ( ISBLANK(M1_NewSaleQuota__c),  M1_NewSaleQuota__c = 0), 0, M1_NewSaleAdjustedAmount__c /  M1_NewSaleQuota__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 New Sale Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M1_NewSaleQuota__c</fullName>
        <label>M1 New Sale Quota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSaleRiskUpsideAmount__c</fullName>
        <label>M1 New Sale Risk/Upside Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_NewSalesAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M1_NewSaleCommitAmount__c, 0)   + NULLVALUE(M1_NewSaleClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 New Sales Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M1_RenewalRiskUpsideAmount__c, 0) +  NULLVALUE(M1_RenewalCommitAmount__c, 0)   + NULLVALUE(M1_RenewalClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Renewal Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalClosedAmount__c</fullName>
        <label>M1 Renewal Closed Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalCommitAmount__c</fullName>
        <label>M1 Renewal Commit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalPipelineAmount__c</fullName>
        <label>M1 Renewal Pipeline Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalPotentialAmount__c</fullName>
        <label>M1 Renewal Potential Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalQuotaGap__c</fullName>
        <formula>NULLVALUE(M1_RenewalAdjustedAmount__c, 0) - NULLVALUE(M1_RenewalQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Renewal Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalQuotaPercentage__c</fullName>
        <formula>IF ( OR ( ISBLANK(M1_RenewalQuota__c),  M1_RenewalQuota__c = 0), 0, M1_RenewalAdjustedAmount__c /  M1_RenewalQuota__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Renewal Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M1_RenewalQuota__c</fullName>
        <label>M1 Renewal Quota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_RenewalRiskUpsideAmount__c</fullName>
        <label>M1 Renewal Risk/Upside Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_DisplayLabel__c</fullName>
        <label>M2 Display Label</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2_NewSaleAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M2_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M2_NewSaleCommitAmount__c, 0)   + NULLVALUE(M2_NewSaleClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 New Sale Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSaleClosedAmount__c</fullName>
        <label>M2 New Sale Closed Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSaleCommitAmount__c</fullName>
        <label>M2 New Sale Commit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSalePipelineAmount__c</fullName>
        <label>M2 New Sale Pipeline Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSalePotentialAmount__c</fullName>
        <label>M2 New Sale Potential Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSaleQuotaGap__c</fullName>
        <formula>NULLVALUE(M2_NewSaleAdjustedAmount__c, 0)  - NULLVALUE(M2_NewSaleQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 New Sale Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSaleQuotaPercentage__c</fullName>
        <formula>IF ( OR ( ISBLANK(M2_NewSaleQuota__c),  M2_NewSaleQuota__c = 0), 0, M2_NewSaleAdjustedAmount__c /  M2_NewSaleQuota__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 New Sale Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M2_NewSaleQuota__c</fullName>
        <label>M2 New Sale Quota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSaleRiskUpsideAmount__c</fullName>
        <label>M2 New Sale Risk/Upside Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_NewSalesAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M2_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M2_NewSaleCommitAmount__c, 0)   + NULLVALUE(M2_NewSaleClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 New Sales Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M2_RenewalRiskUpsideAmount__c, 0) +  NULLVALUE(M2_RenewalCommitAmount__c, 0)   + NULLVALUE(M2_RenewalClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Renewal Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalClosedAmount__c</fullName>
        <label>M2 Renewal Closed Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalCommitAmount__c</fullName>
        <label>M2 Renewal Commit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalPipelineAmount__c</fullName>
        <label>M2 Renewal Pipeline Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalPotentialAmount__c</fullName>
        <label>M2 Renewal Potential Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalQuotaGap__c</fullName>
        <formula>NULLVALUE(M2_RenewalAdjustedAmount__c, 0) - NULLVALUE(M2_RenewalQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Renewal Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalQuotaPercentage__c</fullName>
        <formula>IF ( OR ( ISBLANK(M2_RenewalQuota__c),  M2_RenewalQuota__c = 0), 0, M2_RenewalAdjustedAmount__c /  M2_RenewalQuota__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Renewal Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M2_RenewalQuota__c</fullName>
        <label>M2 Renewal Quota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_RenewalRiskUpsideAmount__c</fullName>
        <label>M2 Renewal Risk/Upside Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_DisplayLabel__c</fullName>
        <label>M3 Display Label</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M3_NewSaleAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M3_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M3_NewSaleCommitAmount__c, 0)   + NULLVALUE(M3_NewSaleClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 New Sale Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSaleClosedAmount__c</fullName>
        <label>M3 New Sale Closed Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSaleCommitAmount__c</fullName>
        <label>M3 New Sale Commit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSalePipelineAmount__c</fullName>
        <label>M3 New Sale Pipeline Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSalePotentialAmount__c</fullName>
        <label>M3 New Sale Potential Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSaleQuotaGap__c</fullName>
        <formula>NULLVALUE(M3_NewSaleAdjustedAmount__c, 0)  - NULLVALUE(M3_NewSaleQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 New Sale Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSaleQuotaPercentage__c</fullName>
        <formula>IF ( OR ( ISBLANK(M3_NewSaleQuota__c),  M3_NewSaleQuota__c = 0), 0, M3_NewSaleAdjustedAmount__c /  M3_NewSaleQuota__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 New Sale Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M3_NewSaleQuota__c</fullName>
        <label>M3 New Sale Quota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSaleRiskUpsideAmount__c</fullName>
        <label>M3 New Sale Risk/Upside Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_NewSalesAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M3_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M3_NewSaleCommitAmount__c, 0)   + NULLVALUE(M3_NewSaleClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 New Sales Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M3_RenewalRiskUpsideAmount__c, 0) +  NULLVALUE(M3_RenewalCommitAmount__c, 0)   + NULLVALUE(M3_RenewalClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Renewal Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalClosedAmount__c</fullName>
        <label>M3 Renewal Closed Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalCommitAmount__c</fullName>
        <label>M3 Renewal Commit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalPipelineAmount__c</fullName>
        <label>M3 Renewal Pipeline Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalPotentialAmount__c</fullName>
        <label>M3 Renewal Potential Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalQuotaGap__c</fullName>
        <formula>NULLVALUE(M3_RenewalAdjustedAmount__c, 0) - NULLVALUE(M3_RenewalQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Renewal Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalQuotaPercentage__c</fullName>
        <formula>IF ( OR ( ISBLANK(M3_RenewalQuota__c),  M3_RenewalQuota__c = 0), 0, M3_RenewalAdjustedAmount__c /  M3_RenewalQuota__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 Renewal Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M3_RenewalQuota__c</fullName>
        <label>M3 Renewal Quota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3_RenewalRiskUpsideAmount__c</fullName>
        <label>M3 Renewal Risk/Upside Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSaleAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSaleAdjustedAmount__c, 0) + NULLVALUE(M2_NewSaleAdjustedAmount__c, 0) + NULLVALUE(M3_NewSaleAdjustedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSaleClosedAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSaleClosedAmount__c, 0) +  NULLVALUE(M2_NewSaleClosedAmount__c, 0)  +  NULLVALUE(M3_NewSaleClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSaleCommitAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSaleCommitAmount__c, 0) +  NULLVALUE(M2_NewSaleCommitAmount__c, 0) +  NULLVALUE(M3_NewSaleCommitAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSalePipelineAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSalePipelineAmount__c, 0) + NULLVALUE(M2_NewSalePipelineAmount__c, 0) + NULLVALUE(M3_NewSalePipelineAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSalePotentialAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSalePotentialAmount__c, 0) + NULLVALUE(M2_NewSalePotentialAmount__c, 0) + NULLVALUE(M3_NewSalePotentialAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Potential Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSaleQuotaGap__c</fullName>
        <formula>NewSaleAdjustedAmount__c - NewSaleQuota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSaleQuotaPercentage__c</fullName>
        <formula>IF ( OR(ISNULL( NewSaleQuota__c ), NewSaleQuota__c = 0), 0,  NewSaleAdjustedAmount__c / NewSaleQuota__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NewSaleQuota__c</fullName>
        <formula>NULLVALUE(M1_NewSaleQuota__c, 0) + NULLVALUE(M2_NewSaleQuota__c, 0) + NULLVALUE(M3_NewSaleQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewSaleRiskUpsideAmount__c</fullName>
        <formula>NULLVALUE(M1_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M2_NewSaleRiskUpsideAmount__c, 0) +  NULLVALUE(M3_NewSaleRiskUpsideAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sale Risk Upside Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalAdjustedAmount__c</fullName>
        <formula>NULLVALUE(M1_RenewalAdjustedAmount__c, 0) + NULLVALUE(M2_RenewalAdjustedAmount__c, 0) + NULLVALUE(M3_RenewalAdjustedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalClosedAmount__c</fullName>
        <formula>NULLVALUE(M1_RenewalClosedAmount__c, 0) +  NULLVALUE(M2_RenewalClosedAmount__c, 0)  +  NULLVALUE(M3_RenewalClosedAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalCommitAmount__c</fullName>
        <formula>NULLVALUE(M1_RenewalCommitAmount__c, 0) +  NULLVALUE(M2_RenewalCommitAmount__c, 0) +  NULLVALUE(M3_RenewalCommitAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalPipelineAmount__c</fullName>
        <formula>NULLVALUE(M1_RenewalPipelineAmount__c, 0) + NULLVALUE(M2_RenewalPipelineAmount__c, 0) + NULLVALUE(M3_RenewalPipelineAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalPotentialAmount__c</fullName>
        <formula>NULLVALUE(M1_RenewalPotentialAmount__c, 0) + NULLVALUE(M2_RenewalPotentialAmount__c, 0) + NULLVALUE(M3_RenewalPotentialAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Potential Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalQuotaGap__c</fullName>
        <formula>RenewalAdjustedAmount__c - RenewalQuota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Quota Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalQuotaPercentage__c</fullName>
        <formula>IF ( OR(ISNULL( RenewalQuota__c ), RenewalQuota__c = 0), 0,  RenewalAdjustedAmount__c / RenewalQuota__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Quota Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RenewalQuota__c</fullName>
        <formula>NULLVALUE(M1_RenewalQuota__c, 0) + NULLVALUE(M2_RenewalQuota__c, 0) + NULLVALUE(M3_RenewalQuota__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalRiskUpsideAmount__c</fullName>
        <formula>NULLVALUE(M1_RenewalRiskUpsideAmount__c, 0) +  NULLVALUE(M2_RenewalRiskUpsideAmount__c, 0) +  NULLVALUE(M3_RenewalRiskUpsideAmount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Risk Upside Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesForecast__c</fullName>
        <label>Sales Forecast</label>
        <referenceTo>SalesForecast__c</referenceTo>
        <relationshipLabel>Snapshots</relationshipLabel>
        <relationshipName>SalesForecastSnapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Forecast_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Forecast Snapshot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Forecast Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>